@@ -2389,3 +2389,4 @@
 20071205 menu.c,menu_data.dat,settings.pl: rearrange ROMs (Stuart).
 20071206 spectrum.c: update comment to reflect added RAM (Stuart).
 20071207 disk/disk.c: initialise 'seclen' in open_td0() (Stuart).
+20071208 z80/{coretest.c,z80_macros.h}: remove contend_write() (Stuart).
